syntax = "proto3";
import "testing_data.proto";
import "optimization_report.proto";

message Data{
    TestingData testing_data = 1;
    OptimizationReport optimization_report = 2;
}